src/ui/render/snapshots/herdr_worktree_nav__ui__render__prompt__tests__a_pane_too_short_for_the_names_still_says_how_many_stop.snap
---
source: src/ui/render/prompt.rs
expression: "screen(&state, 92, 9)"
---
" / search panes                                                                     5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   │  └── · shell       ┌──────────────────────────────────────────┐                       │"
"   ├── ○ feat/login     │ Delete this checkout and close 1 pane?   │                       █"
"   │  └── ○ codex       │   y delete     any other key cancels     │                       │"
"   └── · fix/crash  no p└──────────────────────────────────────────┘                       │"
"                                                                                           │"
" me/app · feat/login · w2:p1 · idle · /wt/feat-login ───────────────────────────────────────"
" y delete  any other key cancels                                                            "
