src/ui/render/snapshots/herdr_worktree_nav__ui__render__prompt__tests__a_pane_with_room_for_the_rows_but_not_the_air_lists_them_all.snap
---
source: src/ui/render/prompt.rs
expression: "screen(&state, 92, 11)"
---
" / sweep                                                                           3 marked "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ ● me/app (1)         ┌──────────────────────────────────────────┐                        "
"   ├── ● main           │ Delete 3 checkouts and their branches?   │                        "
" ◆ │  └── ● claude      │   chore/deps  /wt/chore-deps             │                        "
"[x]├── · feat/login  gon│   feat/login  /wt/feat-login             │                        "
"[x]├── · fix/crash  gone│   fix/crash   /wt/fix-crash              │                        "
"[x]└── · chore/deps  gon│   y delete     any other key cancels     │                        "
"                        └──────────────────────────────────────────┘                        "
" me/app · main · w1:p1 · working · /wt/main ────────────────────────────────────────────────"
" y delete  any other key cancels                                                            "
