src/ui/render/snapshots/herdr_worktree_nav__ui__render__prompt__tests__a_short_pane_lists_what_fits_and_counts_the_rest.snap
---
source: src/ui/render/prompt.rs
expression: "screen(&state, 92, 12)"
---
" / sweep                                                                           8 marked "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ ● me/app (1)         ┌──────────────────────────────────────────┐                       █"
"   ├── ● main           │ Delete 8 checkouts and their branches?   │                       █"
" ◆ │  └── ● claude      │   feat/a  /wt/feat-a                     │                       █"
"[x]├── · feat/a  gone  n│   feat/b  /wt/feat-b                     │                       █"
"[x]├── · feat/b  gone  n│   feat/c  /wt/feat-c                     │                       █"
"[x]├── · feat/c  gone  n│   +5 more                                │                       │"
"[x]├── · feat/d  gone  n│   y delete     any other key cancels     │                       │"
"[x]├── · feat/e  gone  n└──────────────────────────────────────────┘                       │"
" me/app · main · w1:p1 · working · /wt/main ────────────────────────────────────────────────"
" y delete  any other key cancels                                                            "
