src/ui/render/snapshots/herdr_worktree_nav__ui__render__prompt__tests__a_wide_pane_still_caps_the_box_at_eighty_columns.snap
---
source: src/ui/render/prompt.rs
expression: "screen(&state, 120, 14)"
---
" / sweep                                                                                                       1 marked "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ ● me/app (1)                                                                                                         "
"   ├── ● main       ┌──────────────────────────────────────────────────────────────────────────────┐                    "
" ◆ │  └── ● claude  │ Delete 1 checkout and its branch?                                            │                    "
"[x]└── · feat/login │                                                                              │n-and-on/feat-login "
"                    │   feat/login  /wt/a-directory-whose-name-run…and-on-and-on-and-on/feat-login │                    "
"                    │                                                                              │                    "
"                    │   y delete     any other key cancels                                         │                    "
"                    └──────────────────────────────────────────────────────────────────────────────┘                    "
"                                                                                                                        "
"                                                                                                                        "
" me/app · main · w1:p1 · working · /wt/main ────────────────────────────────────────────────────────────────────────────"
" y delete  any other key cancels                                                                                        "
