src/ui/render/snapshots/herdr_worktree_nav__ui__render__prompt__tests__draws_the_question_a_deletion_asks_before_it_happens.snap
---
source: src/ui/render/prompt.rs
expression: "screen(&state, 92, 12)"
---
" / search panes                                                                     5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ◆ │  ├── ● claude        ┌──────────────────────────────────────┐                         │"
"   │  └── · shell         │ Delete this checkout?                │                         █"
"   ├── ○ feat/login       │                                      │                         █"
"   │  └── ○ codex         │   fix/crash                          │                         █"
"   └── · fix/crash  no pan│   /wt/fix-crash                      │                         █"
"                          │                                      │                         │"
"   ● me/site (1)          │   y delete     any other key cancels │                         │"
"   └── ● develop          └──────────────────────────────────────┘                         │"
" me/app · fix/crash · /wt/fix-crash ────────────────────────────────────────────────────────"
" y delete  any other key cancels                                                            "
