src/ui/render/snapshots/herdr_worktree_nav__ui__render__prompt__tests__the_question_shrinks_rather_than_breaking_in_a_short_pane.snap
---
source: src/ui/render/prompt.rs
expression: "screen(&state, 92, 10)"
---
" / search panes                                                                     5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   │  └── · shell         ┌──────────────────────────────────────┐                         │"
"   ├── ○ feat/login       │ Delete this checkout?                │                         █"
"   │  └── ○ codex         │   fix/crash                          │                         █"
"   └── · fix/crash  no pan│   /wt/fix-crash                      │                         │"
"                          │   y delete     any other key cancels │                         │"
"   ● me/site (1)          └──────────────────────────────────────┘                         │"
" me/app · fix/crash · /wt/fix-crash ────────────────────────────────────────────────────────"
" y delete  any other key cancels                                                            "
